Fix package name so NPM installs don't fail.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template",
+  "name": "@webcomponents/template",
   "version": "0.0.1",
   "description": "Minimal template polyfills needed by webcomponents.js",
   "main": "template.js",
