--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@webcomponents/template",
   "version": "0.0.1",
-  "description": "Minimal template polyfills needed by webcomponents.js",
+  "description": "HTML Template polyfill",
   "main": "template.js",
   "directories": {
     "test": "tests"
@@ -10,7 +10,17 @@
     "type": "git",
     "url": "https://github.com/webcomponents/template.git"
   },
-  "author": "The Polymer Authors",
+  "author": "The Polymer Project Authors (https://polymer.github.io/AUTHORS.txt)",
+  "keywords": [
+    "html-template",
+    "htmltemplate",
+    "html-templates",
+    "htmltemplates",
+    "web-components",
+    "webcomponents",
+    "polyfill",
+    "shim"
+  ],
   "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/webcomponents/template/issues"
@@ -18,7 +28,7 @@
   "scripts": {
     "test": "wct"
   },
-  "homepage": "http://webcomponents.org",
+  "homepage": "https://webcomponents.org/polyfills",
   "devDependencies": {
     "web-component-tester": "^5.0.0"
   }
