--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "description": "HTML Template polyfill",
   "main": "template.js",
   "authors": [
-    "The Polymer Project Authors (https://polymer.github.io/AUTHORS.txt)"
+    "The Polymer Authors (https://polymer.github.io/AUTHORS.txt)"
   ],
   "license": "BSD-3-Clause",
   "repository": {
