--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "url": "https://github.com/webcomponents/template/issues"
   },
   "scripts": {
-    "test": "wct"
+    "test": "wct",
+    "lint": "eslint template.js"
   },
   "homepage": "http://webcomponents.org",
   "devDependencies": {
-    "web-component-tester": "^5.0.0"
+    "eslint": "^4.8.0",
+    "web-component-tester": "^6.3.0"
   },
   "publishConfig": {
     "access": "public"
