Performance improvements for DocumentFragment polyfill
Add tests for DocumentFragment

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,13 @@
   "env": {
     "browser": true
   },
+  "plugins": [
+    "html"
+  ],
+  "rules": {
+    "semi": "error",
+    "strict": "error"
+  },
   "parserOptions": {
     "ecmaVersion": 5
   }
