--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 sudo: false
 dist: trusty
-node_js: 6
+node_js: stable
 addons:
   firefox: latest
   chrome: stable
@@ -12,7 +12,7 @@ before_script:
 script:
 - xvfb-run wct
 - if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then wct -s 'windows 10/microsoftedge@14' -s 'windows 10/microsoftedge@15'
-  -s 'windows 8.1/internet explorer@11' -s 'os x 10.12/safari@10' -s 'os x 10.11/safari@9' -s 'Linux/chrome@41';
+  -s 'windows 8.1/internet explorer@11' -s 'os x 10.12/safari@11' -s 'os x 10.12/safari@10' -s 'os x 10.11/safari@9' -s 'Linux/chrome@41';
   fi
 env:
   global:
