--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,9 @@ addons:
   firefox: latest
   chrome: stable
 before_script:
-- npm install -g bower
-- bower install
 - npm run lint
 script:
-- xvfb-run wct
+- xvfb-run wct --npm
 - if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then wct -s 'windows 10/microsoftedge@13' -s 'windows 10/microsoftedge@14' -s 'windows 10/microsoftedge@15' -s 'windows 10/microsoftedge@16'
   -s 'windows 8.1/internet explorer@11' -s 'os x 10.12/safari@11' -s 'os x 10.12/safari@10' -s 'os x 10.11/safari@9' -s 'Linux/chrome@41';
   fi
