--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "url": "https://github.com/webcomponents/template/issues"
   },
   "scripts": {
-    "test": "npm run lint && wct",
+    "test": "npm run lint && wct --npm",
     "lint": "eslint template.js test/**/*.html"
   },
   "homepage": "http://webcomponents.org",
   "devDependencies": {
     "eslint": "^4.19.0",
-    "eslint-plugin-html": "^4.0.2",
-    "web-component-tester": "^6.5.0"
+    "eslint-plugin-html": "^4.0.3",
+    "web-component-tester": "^6.6.0",
+    "wct-browser-legacy": "^1.0.1"
   },
   "publishConfig": {
     "access": "public"
