--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "url": "https://github.com/webcomponents/template/issues"
   },
   "scripts": {
-    "test": "npm run lint && wct --npm",
-    "lint": "eslint template.js test/**/*.html"
+    "test": "npm run lint && wct",
+    "lint": "eslint template.js tests/**/*.html"
   },
   "homepage": "http://webcomponents.org",
   "devDependencies": {
-    "eslint": "^4.19.0",
+    "eslint": "^5.2.0",
     "eslint-plugin-html": "^4.0.3",
-    "web-component-tester": "^6.6.0",
-    "wct-browser-legacy": "^1.0.1"
+    "wct-browser-legacy": "^1.0.1",
+    "web-component-tester": "^6.7.1"
   },
   "publishConfig": {
     "access": "public"
